refactor: JakartaEE 9.1